kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather-namespace  
  labels:
    app: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: sasibk/weather-app:27
        ports:
        - containerPort: 3000
